deployments/observability/victorialogs/vl-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victorialogs
  namespace: observability
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - logs.talos-cluster.local.obleey.com
  rules:
    - backendRefs:
        - name: victorialogs-victoria-logs-single-server
          port: 9428
